--- a/index.html
+++ b/index.html
@@ -8,17 +8,52 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- CSS -->
-        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+        <link href="./css/media.css" rel="stylesheet">
 
         <!-- Icone da página -->
-        <link rel="shortcut icon" type="imagem/x-icon" href="./assets/img/favicon.ico" />
+        <link rel="shortcut icon" type="imagem/x-icon" href="./components/images/favicon.ico" />
 
         <!-- Título da página -->
         <title>Newsletter Landing Page</title>
     </head>
 
     <body>
-        <h1>teste</h1>
+        <header>
+            <div id="title">
+                <h1>Marketing</h1>
+                <h1>Criativo</h1>
+            </div>
+
+            <ul>
+                <a href="#"><li>Início</li></a>
+                <a href="#"><li>Serviços</li></a>
+                <a href="#"><li>Sobre</li></a>
+                <a href="#"><li>Contato</li></a>
+                <a href="#" id="inscreva-se-btn"><li>Já tem uma conta?</li></a>
+            </ul>
+        </header>
+
+        <main>
+            <aside>
+                <h2>Inscreva-se agora</h2>
+                <h2>na Newsletter</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto maiores quis dolore odio voluptatem temporibus. 
+                </p>
+
+                <form>
+                    <input type="text" placeholder="Nome">
+                    <input type="email" placeholder="E-mail">
+                    <input type="submit" placeholder="Enviar >">
+                </form>
+            </aside>
+
+            <article>
+                <img src="./components/images/email-capture.png" alt="Imagem newsletter">
+            </article>
+        </main>
     </body>
 
 </html>
