--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 
         <main>
             <aside>
-                <h2>Inscreva-se agora</h2>
+                <h2><span>Inscreva-se agora</span></h2>
                 <h2>na Newsletter</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto maiores quis dolore odio voluptatem temporibus. 
+                    Atualizar-se com as melhores notícias sobre marketing, se informando com conteúdos relevantes da nossa plataforma. Dessa forma, é possível ficar por dentro das novidades da sua área de atuação, aliando praticidade e qualidade.
                 </p>
 
                 <form>
                     <input type="text" placeholder="Nome">
                     <input type="email" placeholder="E-mail">
-                    <input type="submit" placeholder="Enviar >">
+                    <input type="submit" value="Enviar >">
                 </form>
             </aside>
 
